5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4124/executions/1747_3097.log
== TEST (2019-05-16 10:17:54) 
-- CODE:
soma = 0
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    while(pos != 0):
NameError: name 'pos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:18:17) 
-- CODE:
soma = 0
pos = 1
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    while(pos != 0):
NameError: name 'pos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:18:45) 
-- CODE:
soma = 0
pos = 1
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    while(pos != 0):
NameError: name 'pos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:19:06) 
-- CODE:
soma = 0
pos = 1
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
108
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:19:43) 
-- CODE:
soma = 0
pos = 1
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
108
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:20:14) 
-- CODE:
soma = 0
pos = 0
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
108
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:20:26) 
-- CODE:
soma = 0
pos = -2
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
108
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:21:49) 
-- CODE:
soma = 0
pos = -2
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
108
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:22:15) 
-- CODE:
soma = 0
pos = -2
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
108
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:23:30) 
-- CODE:
soma = 0
pos = -2
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
108
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:23:53) 
-- CODE:
soma = 0
pos = -2
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- EXECUTION TIME:
0.126881
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
108
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
177
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:24:11) 
-- CODE:
soma = 0
pos = -2
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
108
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:24:22) 
-- CODE:
soma = 0
pos = -1
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
108
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:25:33) 
-- CODE:
soma = 0
pos = int(input("Posicao do joquei: "))
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:16) 
-- CODE:
soma = 0
pt = 0
pos = int(input("Posicao do joquei: "))
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:20) 
-- CODE:
soma = 0
pt = 0
pos = int(input("Posicao do joquei: "))
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:26:20) 
-- CODE:
soma = 0
pt = 0
pos = int(input("Posicao do joquei: "))
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- EXECUTION TIME:
0.137823
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
83
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
152
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:23) 
-- CODE:
soma = 0
pt = 0
pos = int(input("Posicao do joquei: "))
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:28) 
-- CODE:
soma = 0
pt = 0
pos = int(input("Posicao do joquei: "))
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:35) 
-- CODE:
soma = 0
pt = 0
pos = int(input("Posicao do joquei: "))
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:48) 
-- CODE:
soma = 0
pt = 0
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(pos != 0):
NameError: name 'pos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:27:02) 
-- CODE:
soma = 0
pt = 0
pos = 1
while(pos != 0):
	pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	soma = soma + pt
print(soma)
	
-- OUTPUT:
108
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:28:37) 
-- CODE:
soma = 0
pt = 0
pos = 1
while(pos != 0):
	#pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	pt = int(input("Posicao do joquei: "))
	soma = soma + pt
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    pt = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:28:51) 
-- CODE:
soma = 0
pt = 0
pos = 1
while(pos != 0):
	#pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	pt = int(input("Posicao do joquei: "))
	soma = soma + pt
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    pt = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:21) 
-- CODE:
soma = 0
pt = 0
pos = int(input("posicao do joquei"))
while(pos != 0):
	#pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	pt = int(input("Posicao do joquei: "))
	soma = soma + pt
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    pt = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:29:27) 
-- CODE:
soma = 0
pt = 0
pos = int(input("posicao do joquei: "))
while(pos != 0):
	#pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	pt = int(input("Posicao do joquei: "))
	soma = soma + pt
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    pt = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:30:02) 
-- CODE:
soma = 0
pt = 0
#pos = int(input("posicao do joquei: "))
while(pos != 0):
	#pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	pos = int(input("Posicao do joquei: "))
	soma = soma + pt
print(soma)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(pos != 0):
NameError: name 'pos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:30:09) 
-- CODE:
soma = 0
pt = 0
pos = int(input("posicao do joquei: "))
while(pos != 0):
	#pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	pos = int(input("Posicao do joquei: "))
	soma = soma + pt
print(soma)
	
-- OUTPUT:
104
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:30:20) 
-- CODE:
soma = 0
pt = 0
pos = int(input("Posicao do joquei: "))
while(pos != 0):
	#pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	pos = int(input("Posicao do joquei: "))
	soma = soma + pt
print(soma)
	
-- OUTPUT:
104
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:30:32) 
-- CODE:
soma = 0
pt = 0
pos = int(input("Posicao do joquei: "))
while(pos != 0):
	#pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	pos = int(input("Posicao do joquei: "))
	soma = soma + pt
print(soma)
	
-- OUTPUT:
104
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:30:54) 
-- CODE:
soma = 0
pt = 0
pos = int(input("Posicao do joquei: "))
while(pos != 0):
	#pos = int(input("Posicao do joquei: "))
	if(pos == 1):
		pt = 25
	elif(pos == 2):
		pt = 18
	elif(pos == 3):
		pt = 12
	elif(pos >= 4 and pos <= 10):
		pt = 14 - pos
	elif(pos < 0 or pos > 10):
		pt = 0
	pos = int(input("Posicao do joquei: "))
	soma = soma + pt
print(soma)
	
-- EXECUTION TIME:
0.207268
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
104
---- user output:
104
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
165
---- user output:
165
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
18
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
